Implement the function of savings goal to be saved on the firebase, improved the ui of  the sign up page, some minor fixes

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -4,7 +4,7 @@ $secondary: #334155;
 $danger: #d43240;
 $success: #237263;
 $info: #a8dadc;
-$light: #ededed;
+$light: #f3f3f3;
 $dark: #2c323a;
 
 :root {
