--- a/src/assets/scss/styles.css
+++ b/src/assets/scss/styles.css
@@ -39,7 +39,7 @@
   --bs-info: #a8dadc;
   --bs-warning: #ffc107;
   --bs-danger: #d43240;
-  --bs-light: #ededed;
+  --bs-light: #f3f3f3;
   --bs-dark: #2c323a;
   --bs-primary-rgb: 29, 53, 87;
   --bs-secondary-rgb: 51, 65, 85;
@@ -47,7 +47,7 @@
   --bs-info-rgb: 168, 218, 220;
   --bs-warning-rgb: 255, 193, 7;
   --bs-danger-rgb: 212, 50, 64;
-  --bs-light-rgb: 237, 237, 237;
+  --bs-light-rgb: 243, 243, 243;
   --bs-dark-rgb: 44, 50, 58;
   --bs-primary-text-emphasis: #0c1523;
   --bs-secondary-text-emphasis: #141a22;
@@ -2014,13 +2014,13 @@ progress {
 
 .table-light {
   --bs-table-color: #000;
-  --bs-table-bg: #ededed;
-  --bs-table-border-color: #d5d5d5;
-  --bs-table-striped-bg: #e1e1e1;
+  --bs-table-bg: #f3f3f3;
+  --bs-table-border-color: #dbdbdb;
+  --bs-table-striped-bg: #e7e7e7;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #d5d5d5;
+  --bs-table-active-bg: #dbdbdb;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #dbdbdb;
+  --bs-table-hover-bg: #e1e1e1;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -3064,19 +3064,19 @@ textarea.form-control-lg {
 
 .btn-light {
   --bs-btn-color: #000;
-  --bs-btn-bg: #ededed;
-  --bs-btn-border-color: #ededed;
+  --bs-btn-bg: #f3f3f3;
+  --bs-btn-border-color: #f3f3f3;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #c9c9c9;
-  --bs-btn-hover-border-color: #bebebe;
-  --bs-btn-focus-shadow-rgb: 201, 201, 201;
+  --bs-btn-hover-bg: #cfcfcf;
+  --bs-btn-hover-border-color: #c2c2c2;
+  --bs-btn-focus-shadow-rgb: 207, 207, 207;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #bebebe;
-  --bs-btn-active-border-color: #b2b2b2;
+  --bs-btn-active-bg: #c2c2c2;
+  --bs-btn-active-border-color: #b6b6b6;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #ededed;
-  --bs-btn-disabled-border-color: #ededed;
+  --bs-btn-disabled-bg: #f3f3f3;
+  --bs-btn-disabled-border-color: #f3f3f3;
 }
 
 .btn-dark {
@@ -3199,19 +3199,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-light {
-  --bs-btn-color: #ededed;
-  --bs-btn-border-color: #ededed;
+  --bs-btn-color: #f3f3f3;
+  --bs-btn-border-color: #f3f3f3;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #ededed;
-  --bs-btn-hover-border-color: #ededed;
-  --bs-btn-focus-shadow-rgb: 237, 237, 237;
+  --bs-btn-hover-bg: #f3f3f3;
+  --bs-btn-hover-border-color: #f3f3f3;
+  --bs-btn-focus-shadow-rgb: 243, 243, 243;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #ededed;
-  --bs-btn-active-border-color: #ededed;
+  --bs-btn-active-bg: #f3f3f3;
+  --bs-btn-active-border-color: #f3f3f3;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #ededed;
+  --bs-btn-disabled-color: #f3f3f3;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #ededed;
+  --bs-btn-disabled-border-color: #f3f3f3;
   --bs-gradient: none;
 }
 
@@ -6796,7 +6796,7 @@ textarea.form-control-lg {
 
 .text-bg-light {
   color: #000 !important;
-  background-color: RGBA(237, 237, 237, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(243, 243, 243, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-dark {
@@ -6863,8 +6863,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-light-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-light:hover, .link-light:focus {
-  color: RGBA(241, 241, 241, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(241, 241, 241, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(245, 245, 245, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(245, 245, 245, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-dark {
