--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,4 +4,5 @@
 @use "./sections/form";
 @use "./sections/history";
 @use "./sections/navbar";
-@use "./sections/error"
+@use "./sections/error";
+@use "./sections/footer";
